--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
+    <title>Bijector</title>
     <script type="text/javascript" src="/cljs/bootstrap.js"></script>
   </head>
   <body>
     <h1>Bijector!</h1>
+    <div id="content"></div>
   </body>
 </html>
